Add popover a slide-toggle

--- a/src/app/componentes/contact/contact.component.html
+++ b/src/app/componentes/contact/contact.component.html
@@ -29,7 +29,10 @@
                     <label class="input-label" for="mensaje">Mensaje</label>
                     <span class="input-message-error"></span>
                 </div>
-                <button type="submit" class="formcontato__boton">Enviar mensaje</button>
+                <button 
+                type="submit" 
+                class="formcontato__boton"
+                >Enviar mensaje</button>
             </form>
         </div>
     </div>
