--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -19,8 +19,9 @@
         <p *ngIf="Password?.errors?.minlength" class="error">El password debe temer 8 o más caracteres.</p>
       </div>
     </div>
-    <mat-dialog-actions class="d-grid">
-      <button type="submit" class="btn btn-outline-success" cdkFocusInitial><i class="fa-thin fa-right-to-bracket"></i> Iniciar sesión</button>
-    </mat-dialog-actions>
+     <div class="d-grid">
+       <button type="submit" class="btn btn-outline-success" cdkFocusInitial><i class="fa-thin fa-right-to-bracket"></i>
+         Iniciar sesión</button>
+     </div>
   </form>  
 </mat-dialog-content>
