--- a/src/app/componentes/skills/skills.component.css
+++ b/src/app/componentes/skills/skills.component.css
@@ -30,7 +30,7 @@
     justify-content: center;
     width: 176px;
     height: 154px;
-    padding-bottom: 1rem;
+    padding: 1rem;
 }
 
 .skills__img, .skills__name {
