Trae data de perso y skill, login ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,11 @@
       <!-- Sección del Header/Title/Hero -->
     <app-profile></app-profile>
 
-      <!-- Sección sobre mi -->
-    <app-about-me></app-about-me>
-
       <!-- Sección de Skills -->
     <app-skills></app-skills>
 
+      <!-- Sección de Experience -->
+    <app-experience></app-experience>
       <!-- Sección de Formación académica -->
     <app-education></app-education>
 
