--- a/src/styles.css
+++ b/src/styles.css
@@ -92,3 +92,19 @@ img {
   .example-tooltip-red {
     background: #b71c1c;
 }
+
+.example-button-row {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(74, 74, 74, .8);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
