Skill completed, falta implementar upload de image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,1 @@
-      <!-- Sección del Menú  -->
-    <app-menu></app-menu>
-
-      <!-- Sección del Header/Title/Hero -->
-    <app-profile></app-profile>
-
-      <!-- Sección de Skills -->
-    <app-skills></app-skills>
-
-      <!-- Sección de Experience -->
-    <app-experience></app-experience>
-      <!-- Sección de Formación académica -->
-    <app-education></app-education>
-
-      <!-- Sección de Experiencia Profesional/Proyectos-->
-    <app-projects></app-projects>
-    <mat-divider></mat-divider>
-      <!-- Sección de Contacto -->
-    <app-contact></app-contact>
-
-      <!-- Sección de Footer -->
-    <app-footer></app-footer>
-
-    <app-btn-goup></app-btn-goup>
+<router-outlet></router-outlet>
