--- a/src/app/componentes/skills/skills.component.css
+++ b/src/app/componentes/skills/skills.component.css
@@ -1,5 +1,4 @@
 /** Seccion skill */
-
 .skills{
     display: flex;
     flex-direction: column;
@@ -13,7 +12,6 @@
 
 .skills__title{
     text-align: center;
-    /* margin: 0; */
 }
 
 .skills__line {
@@ -25,14 +23,16 @@
 }
 
 .skills__box{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* align-items: center; */
     width: 176px;
-    /* height: 154px; */
-    padding: 1rem 1rem 0 1rem;
     background: #1E2121;
+}
+
+.skills__list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 1rem 0;
 }
 
 .skills__img {
@@ -45,11 +45,6 @@
   color: aliceblue;
 }
 
-.logo{
-    width: 64px;
-    height: 64px;
-}
-
 @media screen and (max-width: 768px) {
   .skills {
     width: 90%;
@@ -57,10 +52,8 @@
 
   .skills__box {
     width: 30%;
-    /* height: 114px; */
     padding: 0.2rem;
   }
-
 }
 
 @media screen and (max-width: 425px) {
