--- a/src/app/componentes/profile/profile.component.css
+++ b/src/app/componentes/profile/profile.component.css
@@ -45,6 +45,11 @@
     border-color: rgba(0,0,0,0.1);
 }
 
+.title__img{
+    background: #355C7D;
+    background: -webkit-linear-gradient(to bottom, #C06C84, #6C5B7B, #355C7D);
+    background: linear-gradient(to bottom, #C06C84, #6C5B7B, #355C7D); 
+}
 a{
     text-decoration: none;
     color: var(--cor-de-link);
