--- a/src/app/componentes/profile/profile.component.css
+++ b/src/app/componentes/profile/profile.component.css
@@ -45,10 +45,11 @@
     border-color: rgba(0,0,0,0.1);
 }
 
-.title__img{
-    background: #355C7D;
-    background: -webkit-linear-gradient(to bottom, #C06C84, #6C5B7B, #355C7D);
-    background: linear-gradient(to bottom, #C06C84, #6C5B7B, #355C7D); 
+.imga{
+    background: #355C7D;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
 }
 a{
     text-decoration: none;
